# flashcard-studio

./: .gitignore  LICENSE  PUBLISHING.md  README.md  package-lock.json  package.json
docs/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: app.js  index.html  style.css
